feature: add properties validation to request body when creating customers
