# src/main/java/com/project1/ms_customer_service/model/entity/PersonalCustomer.java
@@ -1,5 +1,15 @@
 package com.project1.ms_customer_service.model.entity;
 
-public class PersonalCustomer {
-    private Integer maxAccounts;
+import lombok.*;
+import lombok.experimental.SuperBuilder;
+
+@EqualsAndHashCode(callSuper = true)
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+@SuperBuilder(toBuilder = true)
+public class PersonalCustomer extends Customer {
+    private String documentNumber;
+    private String firstName;
+    private String lastName;
 }
